--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <link rel="canonical" href="https://www.sanmarcosdems.org">
 </head>
 <body>
-  <p>If you are not redirected, <a href="https://www.sanmarcosdems.org">click here</a>.</p>
+  <p>If you are not redirected soon, <a href="https://www.sanmarcosdems.org">click here</a>.</p>
 </body>
 </html>
